--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,9 @@ jobs:
 
     - name: Run Tests
       run: |
-        busted -c -v --output=utfTerminal
+        busted -c -v --lpath="./lua/?.lua;./lua/?/init.lua" --output=utfTerminal tests/features/
+      env:
+        LUA_PATH: "./lua/?.lua;./lua/?/init.lua;$LUA_PATH"
 
     - name: Report Coverage
       if: success()
